<resources>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="register">Register</string>
    <string name="repeat_password">Repeat password</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="profile_picture">Upload picture</string>

    <string name="app_name">Event organizer</string>
    <string name="new_placeoffer_location">Location</string>
    <string name="new_placeoffer_capacity">Capacity</string>
    <string name="new_placeoffer_notes">Notes</string>
    <string name="new_placeoffer_price">Price</string>
    <string name="add_placeoffer">Add</string>

    <!-- str values for shopping list -->
    <string name="new_shoppingitem_category">Category</string>
    <string name="new_shoppingitem_name">Name</string>
    <string name="new_shoppingitem_description">Description</string>
    <string name="new_shoppingitem_quantity">Quantity</string>
    <string name="new_shoppingitem_price">Price</string>
    <string name="action_edit">Edit</string>
    <string name="action_settings">Settings</string>
    <string name="action_delete">Delete</string>
    <string name="edit_placeoffer">Edit</string>
    <string name="edit_shoppingitem">Edit</string>
    <string name="add_shoppingitem">Add</string>

    <string name="invitation_email">Enter email address</string>
    <string name="invitations_title">Invitations</string>

    <string-array name="shoppingitem_categories">
        <item>Food</item>
        <item>Drink</item>
    </string-array>

    <string name="my_events_title">My events</string>
    <string name="add_new_event_title">Add new event</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>

    <!-- Navigation Drawer menu labels -->
    <string name="nav_my_events">My events</string>
    <string name="nav_invitations">Invitations</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_profile">Profile</string>

    <!-- Add new event -->
    <string name="add_new_event">Add event</string>
    <string name="new_event_name">Name</string>
    <string name="new_event_description">Description</string>
    <string name="new_event_budget">Budget</string>
    <string name="new_event_start_date">Start date</string>
    <string name="new_event_end_date">End date</string>
    <string name="new_event_category">Category</string>
    <string name="new_event_image">Upload image</string>

    <string-array name="event_categories">
        <item value="1">Rodjendan</item>
        <item value="2">Zurka</item>
        <item value="3">Svadba</item>
    </string-array>

    <!-- Toolbar titles when navigation menu item is selected -->
    <string-array name="nav_item_activity_titles">
        <item>My events</item>
        <item>Invitations</item>
        <item>Settings</item>
    </string-array>
    <string name="title_activity_people_overview">PeopleOverviewActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="event_final_place">Event place</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

</resources>
