<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/my_events"
            android:icon="@drawable/ic_event_black_24dp"
            android:title="@string/nav_my_events" />
        <item
            android:id="@+id/my_invitations"
            android:icon="@drawable/ic_insert_invitation_black_24dp"
            android:title="@string/nav_invitations" />
    </group>
    <item android:title="Other">
        <menu>
            <item
                android:id="@+id/settings"
                android:icon="@drawable/ic_settings_black_24dp"
                android:title="@string/nav_settings" />
            <item
                android:id="@+id/logout"
                android:icon="@drawable/ic_logout_24dp"
                android:title="@string/logout" />
        </menu>
    </item>
</menu>